# torchio

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/ffmpeg/: .gitkeep
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: converter.rs  ffmpeg.rs  lib.rs  main.rs
src/components/: ConversionSheet.tsx  DropZone.tsx  ExportIndicator.tsx  ExportPanel.tsx  FileInfoPanel.tsx  FileList.tsx  PlaybackControls.tsx  TargetSettings.tsx  TrimBar.tsx  TrimModal.tsx  TrimSidebar.tsx
src/components/ui/: button.tsx  card.tsx  modal.tsx  progress.tsx  sheet.tsx  tooltip.tsx
src/contexts/: ExportContext.tsx
src/hooks/: useFrameCache.ts  useMarkerManager.ts  useSettings.ts  useTrimKeyboardShortcuts.ts  useTrimManager.ts  useTrimPersistence.ts  useVideoPlayback.ts
src/lib/: formats.ts  utils.ts
